<?xml version="1.0"?>
<package format="2">
  <name>drake_ros_examples</name>
  <version>0.1.0</version>
  <description>Examples using Drake systems that interact with ROS 2.</description>
  <maintainer email="ian.mcmahon@tri.global">Ian McMahon</maintainer>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>drake_ros</depend>
  <depend>std_msgs</depend>
  <depend>libgflags-dev</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
