# Copyright 2022 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@ros2//:ros_cc.bzl", "ros_cc_test")
load("@ros2//:ros_py.bzl", "ros_py_test")
load(
    "@drake//tools/skylark:pybind.bzl",
    "pybind_py_library",
)

PYBIND_EXCLUDES = [
    "**/*_py.cc",
    "**/*_pybind.h",
]

# TODO(sloretz) more granular targets for static linking
cc_library(
    name = "drake_ros_viz",
    srcs = glob(
        [
            "src/*.cc",
            "src/*.h",
        ],
        exclude = PYBIND_EXCLUDES,
    ),
    hdrs = glob(
        ["include/**/*.h"],
        exclude = PYBIND_EXCLUDES,
    ),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@drake//common",
        "@drake//geometry",
        "@drake//math",
        "@drake//multibody/plant",
        "@drake//systems/framework",
        "@drake_ros_core",
        "@drake_ros_tf2",
        "@ros2//:geometry_msgs_cc",
        "@ros2//:rclcpp_cc",
        "@ros2//:visualization_msgs_cc",
    ],
)

ros_cc_test(
    name = "test_name_conventions",
    includes = ["src"],
    size = "small",
    srcs = ["test/test_name_conventions.cc"],
    rmw_implementation = "rmw_cyclonedds_cpp",
    deps = [
        ":drake_ros_viz",
        "@com_google_googletest//:gtest_main",
    ],
)

ros_cc_test(
    name = "test_scene_markers",
    size = "small",
    srcs = ["test/test_scene_markers.cc"],
    rmw_implementation = "rmw_cyclonedds_cpp",
    deps = [
        ":drake_ros_viz",
        "@com_google_googletest//:gtest_main",
        "@drake//common",
        "@drake//geometry",
        "@drake//math",
        "@drake//multibody/plant",
        "@drake//systems/framework",
        "@drake//systems/primitives",
        "@ros2//:visualization_msgs_cc",
    ],
)

cc_library(
    name = "python_bindings_internal_hdrs",
    hdrs = glob(["include/**/*_pybind.h"]),
    strip_include_prefix = "include/",
)

pybind_py_library(
    name = "drake_ros_viz_py",
    cc_deps = [
        # TODO(sloretz) - depend on a shared library target
        # This links statically, and so can lead to ODR violations if the
        # python and C++ libraries are depended upon by the same python target.
        ":drake_ros_viz",
        ":python_bindings_internal_hdrs",
    ],
    cc_so_name = "drake_ros_viz",
    cc_srcs = glob(["src/**/*_py.cc"]),
    py_deps = [
        "@drake_ros_core//:drake_ros_core_py",
        "@drake_ros_tf2//:drake_ros_tf2_py",
    ],
    py_imports = ["src"],
    visibility = ["//visibility:public"],
)

ros_py_test(
    name = "test_python_bindings",
    srcs = ["test/test_python_bindings.py"],
    legacy_create_init = False,
    main = "test/test_python_bindings.py",
    deps = [
        ":drake_ros_viz_py",
        "@drake//bindings/pydrake",
        "@drake_ros_core//:drake_ros_core_py",
        "@ros2//:rclpy_py",
        "@ros2//:visualization_msgs_py",
        "@ros2//resources/rmw_isolation:rmw_isolation_py",
    ],
)
